k8s/overlays/des/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: des.quarkus-app.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: quarkus-svc-des
                port:
                  number: 80
